--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 
 	<name>Explore With Me</name>
 	<modules>
-		<module>stats-service</module>
-		<module>stats-client</module>
 		<module>stats-dto</module>
+		<module>stats-client</module>
+		<module>stats-service</module>
 	</modules>
 
 
@@ -29,6 +29,21 @@
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>ru.practicum</groupId>
+				<artifactId>stats-dto</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ru.practicum</groupId>
+				<artifactId>stats-client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
