--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     networks:
       - app-network
 
-  stats-service:
-    build: ./stats-service
-    container_name: stats-service
+  stats-server:
+    build: ./stats-server
+    container_name: stats-server
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://stats-db:5432/stats
       SPRING_DATASOURCE_USERNAME: postgres
@@ -55,7 +55,7 @@ services:
   #     - "8080:8080"
   #   depends_on:
   #     - ewm-db
-  #     - stats-service
+  #     - stats-server
   #   networks:
   #     - app-network
 
