--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   stats-db:
@@ -44,13 +43,17 @@ services:
     networks:
       - app-network
 
+  ewm-service:
+    ports:
+      - "8080:8080"
+
   # Заготовка для сервиса
   # main-service:
   #   build: ./main-service
   #   container_name: main-service
   #   environment:
   #     SPRING_DATASOURCE_URL: jdbc:postgresql://ewm-db:5432/ewm
-  #     STATS_SERVER_URL: http://stats-service:9090
+  #     STATS_SERVER_URL: http://stats-server:9090
   #   ports:
   #     - "8080:8080"
   #   depends_on:
