--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   stats-db:
     image: postgres:16.1
@@ -43,24 +42,21 @@ services:
     networks:
       - app-network
 
-  ewm-service:
-    ports:
-      - "8080:8080"
 
-  # Заготовка для сервиса
-  # main-service:
-  #   build: ./main-service
-  #   container_name: main-service
-  #   environment:
-  #     SPRING_DATASOURCE_URL: jdbc:postgresql://ewm-db:5432/ewm
-  #     STATS_SERVER_URL: http://stats-server:9090
-  #   ports:
-  #     - "8080:8080"
-  #   depends_on:
-  #     - ewm-db
-  #     - stats-server
-  #   networks:
-  #     - app-network
+    ewm-service:
+      build: ./ewm-service
+      container_name: ewm-service
+      environment:
+        SPRING_DATASOURCE_URL: jdbc:postgresql://ewm-db:5432/ewm
+        STATS_SERVER_URL: http://stats-server:9090
+        SERVER_PORT: 8080
+      ports:
+        - "8080:8080"
+      depends_on:
+        - ewm-db
+        - stats-server
+      networks:
+        - app-network
 
 networks:
   app-network:
