--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>stats-dto</module>
 		<module>stats-client</module>
 		<module>stats-server</module>
+		<module>ewm-service</module>
 	</modules>
 
 
