Правки для тестов на GitHub

--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -39,13 +39,21 @@
     </dependencies>
 
     <build>
+        <finalName>ewm-service</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <finalName>ewm-service</finalName>
+                    <mainClass>com.example.ewm.EwmApplication</mainClass>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
