--- a/stats-dto/src/main/resources/application.properties
+++ b/stats-dto/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-# ?????????? ??????? ??? Spring MVC
+# Spring MVC
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 
-# ?????????? ??????? ??? Jackson
+# Jackson
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Europe/Moscow
