--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,11 +1,20 @@
-server.port=8080
-spring.application.name=ewm-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-logging.level.com.example.ewm=DEBUG
-logging.level.org.springframework.web=INFO
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+server.port=8080
+
+stats.service.url=http://localhost:9090
 
 management.endpoints.web.exposure.include=health,info,metrics
-management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+logging.level.ru.practicum=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
