--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,23 +1,23 @@
 # Database Connection to Postgres DB
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
+spring.datasource.url=jdbc:postgresql://localhost:5434/ewm
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8080
 
-stats.service.url=http://localhost:9090
+# stats.service.url=http://localhost:9090
 
-# management.endpoints.web.exposure.include=health,info,metrics
-# management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
 
 # Logging Configuration
 logging.level.ru.practicum=DEBUG
 # logging.level.org.hibernate.SQL=DEBUG
-# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
