--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -3,14 +3,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/stats
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-
 server.port=9090
-
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
-
 logging.level.ru.practicum=DEBUG
