Исправил под тесты, локально проходят

--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -1,12 +1,21 @@
-# ?????? ??? ??????????? ? ??
+# Database
 spring.datasource.url=jdbc:postgresql://localhost:5433/stats
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 server.port=9090
+
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
 logging.level.ru.practicum=DEBUG
+
+# Jackson configuration
+spring.jackson.serialization.indent-output=true
+spring.jackson.default-property-inclusion=non_null
