Исправил под тесты, локально проходят

--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -19,3 +19,7 @@ logging.level.ru.practicum=DEBUG
 # Jackson configuration
 spring.jackson.serialization.indent-output=true
 spring.jackson.default-property-inclusion=non_null
+
+# SQL initialization
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
