Исправил под тесты, локально проходят

--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -21,5 +21,7 @@ spring.jackson.serialization.indent-output=true
 spring.jackson.default-property-inclusion=non_null
 
 # SQL initialization
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+# spring.sql.init.mode=always
+# spring.jpa.defer-datasource-initialization=true
+
+logging.level.org.zalando.logbook: TRACE
