--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -1,27 +1,25 @@
-# Database
+# Database to Postgres DB
 spring.datasource.url=jdbc:postgresql://localhost:5433/stats
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.mode=always
 
 server.port=9090
 
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
 
-logging.level.ru.practicum=DEBUG
 
 # Jackson configuration
 spring.jackson.serialization.indent-output=true
 spring.jackson.default-property-inclusion=non_null
 
-# SQL initialization
-# spring.sql.init.mode=always
-# spring.jpa.defer-datasource-initialization=true
-
+# Logging Configuration
+logging.level.ru.practicum=DEBUG
 logging.level.org.zalando.logbook: TRACE
