--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.sql.init.mode=always
 
 server.port=8080
 
-stats.service.url=http://localhost:9090
+stats.service.url=http://stats-server:9090
 
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
