Исправил под тесты, локально проходят

--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database to Postgres DB
-spring.datasource.url=jdbc:postgresql://localhost:5433/stats
+spring.datasource.url=jdbc:postgresql://stats-db:5433/stats
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
