Исправил под тесты, локально проходят

--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database to Postgres DB
-spring.datasource.url=jdbc:postgresql://stats-db:5433/stats
+spring.datasource.url=jdbc:postgresql://stats-db:5432/stats
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,6 +14,8 @@ server.port=9090
 
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+management.endpoint.health.enabled=true
+management.health.db.enabled=true
 
 
 # Jackson configuration
