--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database Connection to Postgres DB
-spring.datasource.url=jdbc:postgresql://ewm-db:5434/ewm
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,10 +12,12 @@ spring.sql.init.mode=always
 
 server.port=8080
 
-stats.server.url=http://stats-server:9090
+stats.service.url=http://stats-server:9090
 
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+management.endpoint.health.enabled=true
+management.health.db.enabled=true
 
 # Logging Configuration
 logging.level.ru.practicum=DEBUG
