--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 # Database Connection to Postgres DB
-spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm
+spring.datasource.url=jdbc:postgresql://localhost:5434/ewm
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 server.port=8080
 
