--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 # Database to Postgres DB
-spring.datasource.url=jdbc:postgresql://stats-db:5432/stats
+spring.datasource.url=jdbc:postgresql://localhost:5433/stats
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 server.port=9090
 
