--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -21,3 +21,12 @@ management.endpoint.health.show-details=always
 # Logging Configuration
 logging.level.ru.practicum=DEBUG
 logging.level.org.zalando.logbook: TRACE
+logging.level.org.springframework.web.servlet=TRACE
+
+# Jackson configuration
+spring.jackson.serialization.indent-output=true
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Europe/Moscow
+
+# Spring MVC
+# spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
