--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.h2database</groupId>
+				<artifactId>h2</artifactId>
+				<version>2.2.224</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
 				<groupId>ru.practicum</groupId>
 				<artifactId>stats-client</artifactId>
 				<version>${project.version}</version>
@@ -99,7 +105,7 @@
 				<plugin>
 					<groupId>com.github.spotbugs</groupId>
 					<artifactId>spotbugs-maven-plugin</artifactId>
-					<version>4.8.5.0</version>
+					<version>4.9.8.1</version>
 					<configuration>
 						<effort>Max</effort>
 						<threshold>High</threshold>
