--- a/stats-client/pom.xml
+++ b/stats-client/pom.xml
@@ -71,6 +71,12 @@
             <version>5.15.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mockserver</artifactId>
+            <version>1.19.7</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
